--- a/index.htm
+++ b/index.htm
@@ -131,9 +131,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
         <div class="common-right clearfix">
           <ul id="header-navprt">
 		  <li class="gov-india"><span>Thursday, July 01, 2021 19:02:56 IST</span></li>
-		 <li class="gov-india1"><a href="common-document.html" title="Common Document">Common Document<span class="pulse2">New</span></a></li>
-		  
-		<marquee class="mrqkv" style="float: left; width: 300px; font-size: 12px; font-weight:bold; padding: 11px 0; box-sizing:border-box;margin-left: 0;" scrollamount="4"><a href="login.html">Parents are requested to click here to check lottery results for Class I admission</a></marquee>
+
     </div>
     </div>
 </div>  </div>
@@ -148,7 +146,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
   <div class="container header-container">
     <h1 class="logo">
     	<a href="index.htm">
-        	<img src="sites/all/themes/school/images/kvslogo.jpg" alt="KVS Logo" title="KVS Logo">
+        	<img height="1000px" src="sites/all/themes/school/images/logo-01.png" alt=" Logo" title=" Logo">
         	  <div class="region region-school-header">
     <div id="block-views-school-header-section-block" class="block block-views">
 
@@ -161,7 +159,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
       <div class="view-content">
         <div class="views-row views-row-1 views-row-odd views-row-first views-row-last">
       
-  <div class="views-field views-field-body">        <div class="field-content"><p><span>Kendriya Vidyalaya</span> <span>No.1 Bajaj Nagar</span><span>An Autonomous Body Under Ministry of Education , Government of India</span><span>CBSE Affiliation Number :1700003  CBSE School Number : 14155</span></p>
+  <div class="views-field views-field-body">        <div class="field-content"><p><span>Government Senior Secondary School </span> <span>Mangan</span><span>CBSE | State Government</span></p>
 </div>  </div>  </div>
     </div>
   
@@ -1112,7 +1110,7 @@ Active involvement of parents and...
     <div class="footer-bottom-wrapper">
     <div class="container footer-bottom-container">
       <div class="footer-content clearfix">
-        <div class="copyright-content">Web Site Content Managed by Kendriya Vidyalaya Sangathan <span>Designed, Developed and Hosted by <a target="_blank" title="Kendriya Vidyalaya Sangathan" href="index-6.htm">Kendriya Vidyalaya Sangathan</a></span> </div>
+        <div class="copyright-content">Web Site Content Managed by  <span>Designed, Developed and Hosted by <a target="_blank" title="Kendriya Vidyalaya Sangathan" href="index-6.htm">ABC</a></span> </div>
       </div>
 	  <div class="total-vis">
 		   		   		</div>
