--- a/school-contact-us.html
+++ b/school-contact-us.html
@@ -353,7 +353,7 @@ Name of Constituency:JAIPUR </p>
 <li>0141 2706742</li>
 <li><strong><i class="fa fa-envelope" aria-hidden="true"></i> E-mail </strong>
 </li><li><a href="mailto:kv1jpr@rediffmail.com">kv1jpr@rediffmail.com</a></li>
-</ul><iframe src="maps/embed.html?pb=!1m18!1m12!1m3!1d3558.792163756556!2d75.79741991459868!3d26.878343583142424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db5d6cb9ba5a5%3A0x213d2a2e1702781f!2sKendriya+Vidyalaya+No.1!5e0!3m2!1sen!2sin!4v1561003140292!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0" allowfullscreen=""></iframe>    
+</ul>
               </div>
     </div>
   
@@ -400,7 +400,7 @@ Name of Constituency:JAIPUR </p>
     <div class="footer-bottom-wrapper">
     <div class="container footer-bottom-container">
       <div class="footer-content clearfix">
-        <div class="copyright-content">Web Site Content Managed by Kendriya Vidyalaya Sangathan <span>Designed, Developed and Hosted by <a target="_blank" title="Kendriya Vidyalaya Sangathan" href="index-6.htm">Kendriya Vidyalaya Sangathan</a></span></div>
+        <div class="copyright-content">Web Site Content Managed by  <span>Designed, Developed and Hosted by <a target="_blank" title="Kendriya Vidyalaya Sangathan" href="index-6.htm">abc</a></span></div>
       </div>
 	  <div class="total-vis">
 		   		   		</div>
